# keyheat-map

./: .gitignore  BUILD_GUIDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: version.json
scripts/: publish.bat  publish.sh  sync-version.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  input_listener.rs  main.rs  tray.rs
src/assets/: .gitkeep
src/components/: Sidebar.tsx  TitleBar.tsx
src/config/: version.ts
src/hooks/: .gitkeep  useTauriCommand.ts
src/pages/: Dashboard.tsx  PosterPage.tsx  SettingsPage.tsx  StatsPage.tsx
src/styles/: global.css
src/utils/: .gitkeep  colorUtils.ts  formatters.ts  keyLayout.ts
