[package]
name = "keyheat-map"
version = "0.7.4"
description = "A keyboard heatmap application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["system-tray", "shell-open", "dialog-all", "fs-all"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rdev = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
